--- a/WildChords/WildChords.csproj
+++ b/WildChords/WildChords.csproj
@@ -74,7 +74,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chord.cs" />
+    <Compile Include="Intervals.cs" />
     <Compile Include="FrequencyReader.cs" />
+    <Compile Include="FrequencyHashTable.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
